elf-me command works

--- a/config.json.sample
+++ b/config.json.sample
@@ -1,3 +1,6 @@
 {
-    "token": ""
+    "token": "from your bot account",
+    "clientId": "your bot's application Id",
+    "guildId": "You guild's id, used for registering commands",
+    "channelId": "channel id for registration responses"
 }
