--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@discordjs/builders": "^1.3.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "csv-parse": "^5.3.2",
     "discord-api-types": "^0.24.0",
     "discord.js": "^13.3.1"
   },
